--- a/templates/config.yaml.j2
+++ b/templates/config.yaml.j2
@@ -136,7 +136,7 @@ consistency:
     # of just the most recent archive.
     checks:
         - repository
-        # - archives
+        - archives
         # - disabled
 
     # Restrict the number of checked archives to the last n. Applies only to the "archives" check.
